Se compilo en modo release

--- a/consolaLPTeatrix.lpi
+++ b/consolaLPTeatrix.lpi
@@ -60,6 +60,11 @@
       </Checks>
       <VerifyObjMethodCallValidity Value="True"/>
     </CodeGeneration>
+    <Linking>
+      <Debugging>
+        <GenerateDebugInfo Value="False"/>
+      </Debugging>
+    </Linking>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
