--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,22 @@
 [SlicesDir]
-
+// Ubicación de archivos de slices CSV de entrada y salida
 Out=/home/leo/TEST/OUT/A/
 In=/home/leo/TEST/IN/A/
 
 
 [PlaysDir]
-
+// Ubicación de archivos de reproduccion CSV de entrada y salida
 Out=/home/leo/TEST/OUT/C/
 In=/home/leo/TEST/IN/C/
 
-
 [demora]
+// -1 no ejecuta en loop
+// delay en milisegundos
 valor = -1
 
 [moverAOut]
+// 1: Lo mueve, 0: lo elimina
 valor = 1
-
 
 [db]
 HostName=127.0.0.1
